working on single webdriver object

--- a/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/classes.html
+++ b/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/classes.html
@@ -31,7 +31,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>closeConnection</td>
+<td>assertAllTests</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>seleniumeasy.test.Tests.HomePageTest</td>
@@ -57,7 +57,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>closeConnection</td>
+<td>sAssertAll</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>seleniumeasy.test.Tests.TablePaginationTest</td>
@@ -87,6 +87,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>closeConnection</td>
+<td>assertAllTests</td>
 <td>&nbsp;</td></tr>
 </table>
