--- a/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/methods.html
+++ b/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/methods.html
@@ -1,22 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>AutomationSuit</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6c8e6b">  <td>21/01/11 23:08:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyTablePaginationMenu()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@5f0e9815]">verifyTablePaginationMenu</td> 
-  <td>main@1635378213</td>   <td></td> </tr>
-<tr bgcolor="6c8e6b">  <td>21/01/11 23:08:15</td>   <td>583</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.closeConnection()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@5f0e9815]">&lt;&lt;closeConnection</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1635378213</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/01/11 23:08:16</td>   <td>1624</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableHeader()[pri:1, instance:seleniumeasy.test.Tests.TablePaginationTest@76884e4b]">verifyTableHeader</td> 
-  <td>main@1635378213</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/01/11 23:08:16</td>   <td>1784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableContents()[pri:2, instance:seleniumeasy.test.Tests.TablePaginationTest@76884e4b]">verifyTableContents</td> 
-  <td>main@1635378213</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/01/11 23:08:19</td>   <td>4723</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TablePaginationTest.closeConnection()[pri:0, instance:seleniumeasy.test.Tests.TablePaginationTest@76884e4b]">&lt;&lt;closeConnection</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1635378213</td>   <td></td> </tr>
-<tr bgcolor="826d77">  <td>21/01/11 23:08:19</td>   <td>4726</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnUsername()[pri:97, instance:seleniumeasy.test.Tests.tblDataSearchTest@126945f9]">verifySearchElementBasedOnUsername</td> 
-  <td>main@1635378213</td>   <td></td> </tr>
-<tr bgcolor="826d77">  <td>21/01/11 23:08:20</td>   <td>5247</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnAssignee()[pri:98, instance:seleniumeasy.test.Tests.tblDataSearchTest@126945f9]">verifySearchElementBasedOnAssignee</td> 
-  <td>main@1635378213</td>   <td></td> </tr>
-<tr bgcolor="826d77">  <td>21/01/11 23:08:20</td>   <td>5249</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;tblDataSearchTest.closeConnection()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@126945f9]">&lt;&lt;closeConnection</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1635378213</td>   <td></td> </tr>
-<tr bgcolor="6c8e6b">  <td>21/01/11 23:08:20</td>   <td>5251</td> <td>&nbsp;</td><td title="&lt;&lt;HomePageTest.sAssertAll()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@5f0e9815]">&lt;&lt;sAssertAll</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1635378213</td>   <td></td> </tr>
+<tr bgcolor="826d77">  <td>21/02/10 16:51:30</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyTablePaginationMenu()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@4196c360]">verifyTablePaginationMenu</td> 
+  <td>main@406375608</td>   <td></td> </tr>
+<tr bgcolor="826d77">  <td>21/02/10 16:52:00</td>   <td>30213</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.sAssertAll()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@4196c360]">&lt;&lt;sAssertAll</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@406375608</td>   <td></td> </tr>
+<tr bgcolor="6095a2">  <td>21/02/10 16:52:01</td>   <td>31305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableHeader()[pri:1, instance:seleniumeasy.test.Tests.TablePaginationTest@41294f8]">verifyTableHeader</td> 
+  <td>main@406375608</td>   <td></td> </tr>
+<tr bgcolor="6095a2">  <td>21/02/10 16:52:01</td>   <td>31320</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableContents()[pri:2, instance:seleniumeasy.test.Tests.TablePaginationTest@41294f8]">verifyTableContents</td> 
+  <td>main@406375608</td>   <td></td> </tr>
+<tr bgcolor="6095a2">  <td>21/02/10 16:52:01</td>   <td>31336</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TablePaginationTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.TablePaginationTest@41294f8]">&lt;&lt;assertAllTests</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@406375608</td>   <td></td> </tr>
+<tr bgcolor="e9807f">  <td>21/02/10 16:52:01</td>   <td>31348</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnUsername()[pri:97, instance:seleniumeasy.test.Tests.tblDataSearchTest@225129c]">verifySearchElementBasedOnUsername</td> 
+  <td>main@406375608</td>   <td></td> </tr>
+<tr bgcolor="e9807f">  <td>21/02/10 16:52:02</td>   <td>31869</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnAssignee()[pri:98, instance:seleniumeasy.test.Tests.tblDataSearchTest@225129c]">verifySearchElementBasedOnAssignee</td> 
+  <td>main@406375608</td>   <td></td> </tr>
+<tr bgcolor="e9807f">  <td>21/02/10 16:52:02</td>   <td>31881</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;tblDataSearchTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@225129c]">&lt;&lt;assertAllTests</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@406375608</td>   <td></td> </tr>
 </table>
