--- a/SeleniumEasyTestAutomation/test-output/old/Default suite/methods-alphabetical.html
+++ b/SeleniumEasyTestAutomation/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6dabbc">  <td>21/01/16 22:40:06</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;tblDataSearchTest.closeConnection()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@6a8658ff]">&lt;&lt;closeConnection</td> 
+<tr bgcolor="6dabbc">  <td>21/02/10 16:47:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;tblDataSearchTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@6a8658ff]">&lt;&lt;assertAllTests</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@403174823</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>21/01/16 22:40:06</td>   <td>-254</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnAssignee()[pri:98, instance:seleniumeasy.test.Tests.tblDataSearchTest@6a8658ff]">verifySearchElementBasedOnAssignee</td> 
+<tr bgcolor="6dabbc">  <td>21/02/10 16:47:56</td>   <td>-412</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnAssignee()[pri:98, instance:seleniumeasy.test.Tests.tblDataSearchTest@6a8658ff]">verifySearchElementBasedOnAssignee</td> 
   <td>main@403174823</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>21/01/16 22:40:05</td>   <td>-1266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnUsername()[pri:97, instance:seleniumeasy.test.Tests.tblDataSearchTest@6a8658ff]">verifySearchElementBasedOnUsername</td> 
+<tr bgcolor="6dabbc">  <td>21/02/10 16:47:55</td>   <td>-1837</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnUsername()[pri:97, instance:seleniumeasy.test.Tests.tblDataSearchTest@6a8658ff]">verifySearchElementBasedOnUsername</td> 
   <td>main@403174823</td>   <td></td> </tr>
 </table>
