--- a/SeleniumEasyTestAutomation/test-output/old/Default suite/reporter-output.html
+++ b/SeleniumEasyTestAutomation/test-output/old/Default suite/reporter-output.html
@@ -1,1 +1,3 @@
-<h2>Reporter output</h2><table></table>
+<h2>Reporter output</h2><table><tr><td>TestData is:markino</td></tr>
+<tr><td>Test Data is : Smith</td></tr>
+</table>
