Added functionality to take screenshot on test failure.

--- a/SeleniumEasyTestAutomation/test-output/old/Default suite/reporter-output.html
+++ b/SeleniumEasyTestAutomation/test-output/old/Default suite/reporter-output.html
@@ -1,3 +1,2 @@
-<h2>Reporter output</h2><table><tr><td>TestData is:markino</td></tr>
-<tr><td>Test Data is : Smith</td></tr>
+<h2>Reporter output</h2><table><tr><td>Test Name is: verifyTablePaginationMenu</td></tr>
 </table>
