--- a/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/methods-alphabetical.html
+++ b/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/methods-alphabetical.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>AutomationSuit</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6095a2">  <td>21/02/10 16:52:01</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TablePaginationTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.TablePaginationTest@41294f8]">&lt;&lt;assertAllTests</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@406375608</td>   <td></td> </tr>
-<tr bgcolor="e9807f">  <td>21/02/10 16:52:02</td>   <td>545</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;tblDataSearchTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@225129c]">&lt;&lt;assertAllTests</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@406375608</td>   <td></td> </tr>
-<tr bgcolor="826d77">  <td>21/02/10 16:52:00</td>   <td>-1123</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.sAssertAll()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@4196c360]">&lt;&lt;sAssertAll</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@406375608</td>   <td></td> </tr>
-<tr bgcolor="e9807f">  <td>21/02/10 16:52:02</td>   <td>533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnAssignee()[pri:98, instance:seleniumeasy.test.Tests.tblDataSearchTest@225129c]">verifySearchElementBasedOnAssignee</td> 
-  <td>main@406375608</td>   <td></td> </tr>
-<tr bgcolor="e9807f">  <td>21/02/10 16:52:01</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnUsername()[pri:97, instance:seleniumeasy.test.Tests.tblDataSearchTest@225129c]">verifySearchElementBasedOnUsername</td> 
-  <td>main@406375608</td>   <td></td> </tr>
-<tr bgcolor="6095a2">  <td>21/02/10 16:52:01</td>   <td>-16</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableContents()[pri:2, instance:seleniumeasy.test.Tests.TablePaginationTest@41294f8]">verifyTableContents</td> 
-  <td>main@406375608</td>   <td></td> </tr>
-<tr bgcolor="6095a2">  <td>21/02/10 16:52:01</td>   <td>-31</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableHeader()[pri:1, instance:seleniumeasy.test.Tests.TablePaginationTest@41294f8]">verifyTableHeader</td> 
-  <td>main@406375608</td>   <td></td> </tr>
-<tr bgcolor="826d77">  <td>21/02/10 16:51:30</td>   <td>-31336</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyTablePaginationMenu()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@4196c360]">verifyTablePaginationMenu</td> 
-  <td>main@406375608</td>   <td></td> </tr>
+<tr bgcolor="8f8f71">  <td>21/02/11 20:00:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TablePaginationTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.TablePaginationTest@1ab06251]">&lt;&lt;assertAllTests</td> 
+<td>&nbsp;</td>  <td>main@1530295320</td>   <td></td> </tr>
+<tr bgcolor="93948d">  <td>21/02/11 20:00:02</td>   <td>529</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;tblDataSearchTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@41ab013]">&lt;&lt;assertAllTests</td> 
+<td>&nbsp;</td>  <td>main@1530295320</td>   <td></td> </tr>
+<tr bgcolor="b6bec2">  <td>21/02/11 20:00:00</td>   <td>-1278</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.sAssertAll()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@3f67593e]">&lt;&lt;sAssertAll</td> 
+<td>&nbsp;</td>  <td>main@1530295320</td>   <td></td> </tr>
+<tr bgcolor="93948d">  <td>21/02/11 20:00:02</td>   <td>533</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnAssignee()[pri:98, instance:seleniumeasy.test.Tests.tblDataSearchTest@41ab013]">verifySearchElementBasedOnAssignee</td> 
+  <td>main@1530295320</td>   <td></td> </tr>
+<tr bgcolor="93948d">  <td>21/02/11 20:00:02</td>   <td>12</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnUsername()[pri:97, instance:seleniumeasy.test.Tests.tblDataSearchTest@41ab013]">verifySearchElementBasedOnUsername</td> 
+  <td>main@1530295320</td>   <td></td> </tr>
+<tr bgcolor="8f8f71">  <td>21/02/11 20:00:02</td>   <td>5</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableContents()[pri:2, instance:seleniumeasy.test.Tests.TablePaginationTest@1ab06251]">verifyTableContents</td> 
+  <td>main@1530295320</td>   <td></td> </tr>
+<tr bgcolor="8f8f71">  <td>21/02/11 20:00:01</td>   <td>-306</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableHeader()[pri:1, instance:seleniumeasy.test.Tests.TablePaginationTest@1ab06251]">verifyTableHeader</td> 
+  <td>main@1530295320</td>   <td></td> </tr>
+<tr bgcolor="b6bec2">  <td>21/02/11 20:00:00</td>   <td>-1913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyTablePaginationMenu()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@3f67593e]">verifyTablePaginationMenu</td> 
+  <td>main@1530295320</td>   <td></td> </tr>
 </table>
