--- a/SeleniumEasyTestAutomation/test-output/old/Default suite/classes.html
+++ b/SeleniumEasyTestAutomation/test-output/old/Default suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>seleniumeasy.test.Tests.tblDataSearchTest</td>
+<td>seleniumeasy.test.Tests.HomePageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchElementBasedOnAssignee</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifySearchElementBasedOnUsername</td>
+<td>verifyTablePaginationMenu</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -31,6 +27,6 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>assertAllTests</td>
+<td>sAssertAll</td>
 <td>&nbsp;</td></tr>
 </table>
