Added Extent Report functionality Created ExtentReportListener which implements IReporter Updated testng.xml to listen to ExtentReportListener

--- a/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/reporter-output.html
+++ b/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/reporter-output.html
@@ -1,2 +1,4 @@
 <h2>Reporter output</h2><table><tr><td>Test Name is: verifyTablePaginationMenu</td></tr>
+<tr><td>TestData is:markino</td></tr>
+<tr><td>Test Data is : Smith</td></tr>
 </table>
