--- a/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/methods.html
+++ b/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/methods.html
@@ -1,20 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>AutomationSuit</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="b6bec2">  <td>21/02/11 20:00:00</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyTablePaginationMenu()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@3f67593e]">verifyTablePaginationMenu</td> 
-  <td>main@1530295320</td>   <td></td> </tr>
-<tr bgcolor="b6bec2">  <td>21/02/11 20:00:00</td>   <td>635</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.sAssertAll()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@3f67593e]">&lt;&lt;sAssertAll</td> 
-<td>&nbsp;</td>  <td>main@1530295320</td>   <td></td> </tr>
-<tr bgcolor="8f8f71">  <td>21/02/11 20:00:01</td>   <td>1607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableHeader()[pri:1, instance:seleniumeasy.test.Tests.TablePaginationTest@1ab06251]">verifyTableHeader</td> 
-  <td>main@1530295320</td>   <td></td> </tr>
-<tr bgcolor="8f8f71">  <td>21/02/11 20:00:02</td>   <td>1913</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TablePaginationTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.TablePaginationTest@1ab06251]">&lt;&lt;assertAllTests</td> 
-<td>&nbsp;</td>  <td>main@1530295320</td>   <td></td> </tr>
-<tr bgcolor="8f8f71">  <td>21/02/11 20:00:02</td>   <td>1918</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableContents()[pri:2, instance:seleniumeasy.test.Tests.TablePaginationTest@1ab06251]">verifyTableContents</td> 
-  <td>main@1530295320</td>   <td></td> </tr>
-<tr bgcolor="93948d">  <td>21/02/11 20:00:02</td>   <td>1925</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnUsername()[pri:97, instance:seleniumeasy.test.Tests.tblDataSearchTest@41ab013]">verifySearchElementBasedOnUsername</td> 
-  <td>main@1530295320</td>   <td></td> </tr>
-<tr bgcolor="93948d">  <td>21/02/11 20:00:02</td>   <td>2442</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;tblDataSearchTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@41ab013]">&lt;&lt;assertAllTests</td> 
-<td>&nbsp;</td>  <td>main@1530295320</td>   <td></td> </tr>
-<tr bgcolor="93948d">  <td>21/02/11 20:00:02</td>   <td>2446</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnAssignee()[pri:98, instance:seleniumeasy.test.Tests.tblDataSearchTest@41ab013]">verifySearchElementBasedOnAssignee</td> 
-  <td>main@1530295320</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>21/02/11 22:34:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyTablePaginationMenu()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@436c81a3]">verifyTablePaginationMenu</td> 
+  <td>main@1911155630</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>21/02/11 22:34:40</td>   <td>1853</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.sAssertAll()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@436c81a3]">&lt;&lt;sAssertAll</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1911155630</td>   <td></td> </tr>
+<tr bgcolor="80ebad">  <td>21/02/11 22:34:40</td>   <td>1854</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableHeader()[pri:1, instance:seleniumeasy.test.Tests.TablePaginationTest@3561c410]">verifyTableHeader</td> 
+  <td>main@1911155630</td>   <td></td> </tr>
+<tr bgcolor="80ebad">  <td>21/02/11 22:35:11</td>   <td>32783</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableContents()[pri:2, instance:seleniumeasy.test.Tests.TablePaginationTest@3561c410]">verifyTableContents</td> 
+  <td>main@1911155630</td>   <td></td> </tr>
+<tr bgcolor="80ebad">  <td>21/02/11 22:35:14</td>   <td>35911</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TablePaginationTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.TablePaginationTest@3561c410]">&lt;&lt;assertAllTests</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1911155630</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>21/02/11 22:35:14</td>   <td>35911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnUsername()[pri:97, instance:seleniumeasy.test.Tests.tblDataSearchTest@59e32960]">verifySearchElementBasedOnUsername</td> 
+  <td>main@1911155630</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>21/02/11 22:35:15</td>   <td>36880</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnAssignee()[pri:98, instance:seleniumeasy.test.Tests.tblDataSearchTest@59e32960]">verifySearchElementBasedOnAssignee</td> 
+  <td>main@1911155630</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>21/02/11 22:35:16</td>   <td>37794</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;tblDataSearchTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@59e32960]">&lt;&lt;assertAllTests</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1911155630</td>   <td></td> </tr>
 </table>
