resolved the defect of multiple browsers opening at the same time. Added the setup and teardown methods in BeforeMethod and AfterMethod Annotations.

--- a/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/methods-alphabetical.html
+++ b/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/methods-alphabetical.html
@@ -1,20 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>AutomationSuit</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="80ebad">  <td>21/02/11 22:35:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TablePaginationTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.TablePaginationTest@3561c410]">&lt;&lt;assertAllTests</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1911155630</td>   <td></td> </tr>
-<tr bgcolor="79f379">  <td>21/02/11 22:35:16</td>   <td>1883</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;tblDataSearchTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@59e32960]">&lt;&lt;assertAllTests</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1911155630</td>   <td></td> </tr>
-<tr bgcolor="657fd0">  <td>21/02/11 22:34:40</td>   <td>-34058</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.sAssertAll()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@436c81a3]">&lt;&lt;sAssertAll</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1911155630</td>   <td></td> </tr>
-<tr bgcolor="79f379">  <td>21/02/11 22:35:15</td>   <td>969</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnAssignee()[pri:98, instance:seleniumeasy.test.Tests.tblDataSearchTest@59e32960]">verifySearchElementBasedOnAssignee</td> 
-  <td>main@1911155630</td>   <td></td> </tr>
-<tr bgcolor="79f379">  <td>21/02/11 22:35:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnUsername()[pri:97, instance:seleniumeasy.test.Tests.tblDataSearchTest@59e32960]">verifySearchElementBasedOnUsername</td> 
-  <td>main@1911155630</td>   <td></td> </tr>
-<tr bgcolor="80ebad">  <td>21/02/11 22:35:11</td>   <td>-3128</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableContents()[pri:2, instance:seleniumeasy.test.Tests.TablePaginationTest@3561c410]">verifyTableContents</td> 
-  <td>main@1911155630</td>   <td></td> </tr>
-<tr bgcolor="80ebad">  <td>21/02/11 22:34:40</td>   <td>-34057</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableHeader()[pri:1, instance:seleniumeasy.test.Tests.TablePaginationTest@3561c410]">verifyTableHeader</td> 
-  <td>main@1911155630</td>   <td></td> </tr>
-<tr bgcolor="657fd0">  <td>21/02/11 22:34:38</td>   <td>-35911</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyTablePaginationMenu()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@436c81a3]">verifyTablePaginationMenu</td> 
-  <td>main@1911155630</td>   <td></td> </tr>
+<tr bgcolor="80ebad">  <td>21/02/12 15:16:24</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TablePaginationTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.TablePaginationTest@3c0ecd4b]">&lt;&lt;assertAllTests</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="80ebad">  <td>21/02/12 15:16:37</td>   <td>13397</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;TablePaginationTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.TablePaginationTest@3c0ecd4b]">&lt;&lt;assertAllTests</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>21/02/12 15:16:48</td>   <td>24638</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;tblDataSearchTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@14bf9759]">&lt;&lt;assertAllTests</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>21/02/12 15:17:01</td>   <td>36998</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;tblDataSearchTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@14bf9759]">&lt;&lt;assertAllTests</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>21/02/12 15:16:13</td>   <td>-10568</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;HomePageTest.postCleanUp()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@598067a5]">&lt;&lt;postCleanUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>21/02/12 15:16:01</td>   <td>-22488</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;HomePageTest.setUp()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@598067a5]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="80ebad">  <td>21/02/12 15:16:14</td>   <td>-9647</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TablePaginationTest.setUp()[pri:0, instance:seleniumeasy.test.Tests.TablePaginationTest@3c0ecd4b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="80ebad">  <td>21/02/12 15:16:25</td>   <td>873</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;TablePaginationTest.setUp()[pri:0, instance:seleniumeasy.test.Tests.TablePaginationTest@3c0ecd4b]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>21/02/12 15:16:38</td>   <td>14513</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;tblDataSearchTest.setUp()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@14bf9759]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>21/02/12 15:16:50</td>   <td>25933</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;tblDataSearchTest.setUp()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@14bf9759]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>21/02/12 15:16:59</td>   <td>35723</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnAssignee()[pri:98, instance:seleniumeasy.test.Tests.tblDataSearchTest@14bf9759]">verifySearchElementBasedOnAssignee</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="79f379">  <td>21/02/12 15:16:47</td>   <td>23654</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnUsername()[pri:97, instance:seleniumeasy.test.Tests.tblDataSearchTest@14bf9759]">verifySearchElementBasedOnUsername</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="80ebad">  <td>21/02/12 15:16:34</td>   <td>10255</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableContents()[pri:2, instance:seleniumeasy.test.Tests.TablePaginationTest@3c0ecd4b]">verifyTableContents</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="80ebad">  <td>21/02/12 15:16:24</td>   <td>-205</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="TablePaginationTest.verifyTableHeader()[pri:1, instance:seleniumeasy.test.Tests.TablePaginationTest@3c0ecd4b]">verifyTableHeader</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
+<tr bgcolor="657fd0">  <td>21/02/12 15:16:12</td>   <td>-11934</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="HomePageTest.verifyTablePaginationMenu()[pri:0, instance:seleniumeasy.test.Tests.HomePageTest@598067a5]">verifyTablePaginationMenu</td> 
+  <td>main@1899073220</td>   <td></td> </tr>
 </table>
