--- a/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/classes.html
+++ b/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/classes.html
@@ -24,15 +24,19 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
 <tr>
-<td align='center' colspan='3'>@AfterClass</td>
+<td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>assertAllTests</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
 <tr>
 <td>seleniumeasy.test.Tests.HomePageTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -50,15 +54,19 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
+<td>&nbsp;</td>
+<td>postCleanUp</td>
+<td>&nbsp;</td></tr>
+<tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
-<tr>
-<td>&nbsp;</td>
-<td>sAssertAll</td>
-<td>&nbsp;</td></tr>
 <tr>
 <td>seleniumeasy.test.Tests.TablePaginationTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
@@ -80,13 +88,17 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
-<td align='center' colspan='3'>@AfterMethod</td>
-</tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
 <tr>
-<td align='center' colspan='3'>@AfterClass</td>
+<td align='center' colspan='3'>@AfterMethod</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
 <td>assertAllTests</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
 </table>
