Implemented 1)Allure Reports 2)Test to find broken links in website

--- a/SeleniumEasyTestAutomation/test-output/old/Default suite/classes.html
+++ b/SeleniumEasyTestAutomation/test-output/old/Default suite/classes.html
@@ -4,18 +4,14 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>seleniumeasy.test.Tests.tblDataSearchTest</td>
+<td>seleniumeasy.test.Tests.BrokenLinkTest</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>verifySearchElementBasedOnAssignee</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
-<td>verifySearchElementBasedOnUsername</td>
+<td>testBrokenLinks</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -32,7 +28,7 @@
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>assertAllTests</td>
+<td>postCleanUp</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
