--- a/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/classes.html
+++ b/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/classes.html
@@ -14,10 +14,6 @@
 <td>verifySearchElementBasedOnAssignee</td>
 <td>&nbsp;</td></tr>
 <tr>
-<td>&nbsp;</td>
-<td>verifySearchElementBasedOnUsername</td>
-<td>&nbsp;</td></tr>
-<tr>
 <td align='center' colspan='3'>@BeforeClass</td>
 </tr>
 <tr>
@@ -97,6 +93,36 @@
 <tr>
 <td>&nbsp;</td>
 <td>assertAllTests</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>seleniumeasy.test.Tests.BrokenLinkTest</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>testBrokenLinks</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>setUp</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td>&nbsp;</td>
+<td>postCleanUp</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
