--- a/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/reporter-output.html
+++ b/SeleniumEasyTestAutomation/test-output/old/AutomationSuit/reporter-output.html
@@ -1,4 +1,7 @@
 <h2>Reporter output</h2><table><tr><td>Test Name is: verifyTablePaginationMenu</td></tr>
-<tr><td>TestData is:markino</td></tr>
 <tr><td>Test Data is : Smith</td></tr>
+<tr><td>Broken Connectionnull  null</td></tr>
+<tr><td>Broken Connectionnull  null</td></tr>
+<tr><td>Broken Connectionnull  null</td></tr>
+<tr><td>Broken Connectionnull  null</td></tr>
 </table>
