--- a/SeleniumEasyTestAutomation/test-output/old/Default suite/methods.html
+++ b/SeleniumEasyTestAutomation/test-output/old/Default suite/methods.html
@@ -1,16 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6dabbc">  <td>21/02/12 15:14:40</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;tblDataSearchTest.setUp()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@3abbfa04]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>21/02/12 15:14:52</td>   <td>11413</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnUsername()[pri:97, instance:seleniumeasy.test.Tests.tblDataSearchTest@3abbfa04]">verifySearchElementBasedOnUsername</td> 
-  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>21/02/12 15:14:53</td>   <td>12410</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;tblDataSearchTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@3abbfa04]">&lt;&lt;assertAllTests</td> 
-<td>&nbsp;</td>  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>21/02/12 15:14:53</td>   <td>13329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;tblDataSearchTest.setUp()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@3abbfa04]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>21/02/12 15:15:03</td>   <td>22831</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="tblDataSearchTest.verifySearchElementBasedOnAssignee()[pri:98, instance:seleniumeasy.test.Tests.tblDataSearchTest@3abbfa04]">verifySearchElementBasedOnAssignee</td> 
-  <td>main@540585569</td>   <td></td> </tr>
-<tr bgcolor="6dabbc">  <td>21/02/12 15:15:04</td>   <td>23797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;tblDataSearchTest.assertAllTests()[pri:0, instance:seleniumeasy.test.Tests.tblDataSearchTest@3abbfa04]">&lt;&lt;assertAllTests</td> 
-<td>&nbsp;</td>  <td>main@540585569</td>   <td></td> </tr>
+<tr bgcolor="71b9a3">  <td>21/02/21 21:46:21</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BrokenLinkTest.setUp()[pri:0, instance:seleniumeasy.test.Tests.BrokenLinkTest@52500920]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@1016162524</td>   <td></td> </tr>
+<tr bgcolor="71b9a3">  <td>21/02/21 21:46:32</td>   <td>10650</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BrokenLinkTest.testBrokenLinks()[pri:0, instance:seleniumeasy.test.Tests.BrokenLinkTest@52500920]">testBrokenLinks</td> 
+  <td>main@1016162524</td>   <td></td> </tr>
+<tr bgcolor="71b9a3">  <td>21/02/21 21:47:06</td>   <td>45134</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BrokenLinkTest.postCleanUp()[pri:0, instance:seleniumeasy.test.Tests.BrokenLinkTest@52500920]">&lt;&lt;postCleanUp</td> 
+<td>&nbsp;</td>  <td>main@1016162524</td>   <td></td> </tr>
 </table>
